@@ -256,8 +256,7 @@ of mixi object."
 	(mapc (lambda (object)
 		(when (mixi-object-p object)
 		  (let ((class (mixi-object-class object)))
-		    (when (or (eq class 'mixi-diary)
-			      (mixi-bbs-p object))
+		    (when (mixi-parent-p object)
 		      (let ((comments (mixi-get-comments object range)))
 			(mapc (lambda (header)
 				(push header headers))
@@ -301,8 +300,7 @@ of mixi object."
 		 (setq objects (mixi-get-diaries object range)))
 		((eq class 'mixi-community)
 		 (setq objects (mixi-get-bbses object range)))
-		((or (eq class 'mixi-diary)
-		     (mixi-bbs-p object))
+		((mixi-parent-p object)
 		 (setq objects (mixi-get-comments object range)))
 		(t (error (concat (symbol-name class)
 				  " is not supported yet.")))))
